# coding-test-4h

./: .env.example  docker-compose.yml
.github/workflows/: backend_ci.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/: chat.py  chat_controller.py  chat_service.py  document_service.py  documents.py  documents_controller.py  dto.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: conversation.py  document.py
backend/app/services/: chat_engine.py  document_processor.py  vector_store.py
backend/tests/: conftest.py  test_chat_controller.py  test_chat_engine.py  test_chat_service.py  test_document_controller.py  test_document_processor.py  test_document_service.py  test_vector_store.py
frontend/: .env.example  Dockerfile  README.md
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/[id]/: page.tsx
frontend/app/upload/: page.tsx
