[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "pgvector>=0.4.1",
    "docling>=2.11.0",
    "pillow>=10.0.0,<12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "testcontainers>=4.13.2",
    "uvicorn[standard]>=0.38.0",
    "langchain>=1.0.4",
    "sentence-transformers>=5.1.2",
    "langchain-openai>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-vertexai>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "testcontainers>=4.13.2",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["app"]

# [project.scripts]
# app = "app.main:main"
